# rules_pkg_config

./: BUILD  MODULE.bazel  requirements_lock.txt
.github/workflows/: ci.yml
examples/host_pkg_config/: BUILD.bazel  MODULE.bazel  main.cc
examples/import_from_conda/: BUILD.bazel  MODULE.bazel  env.yml  main.cc
examples/import_from_directory/: BUILD.bazel  MODULE.bazel  main.cc
examples/import_from_directory/repo_env_repo/include/simple/: simple.h
examples/import_from_host/: MODULE.bazel
examples/repo_pkg_config/: .bazelignore  BUILD.bazel  MODULE.bazel
examples/repo_pkg_config/repo_env_repo/: BUILD.bazel  MODULE.bazel
examples/repo_pkg_config/repo_env_repo/lib/pkgconfig/: simple.pc
pkg_config/: BUILD  extensions.bzl
pkg_config/private/: linker.bzl  paths.bzl  repository.bzl  rule.bzl  tools.bzl
pkg_config/private/extensions/: module.bzl
pkg_config/private/scripts/: BUILD  expand_globs.py  get_dll_from_import_lib.py  mirror_paths.py
pkg_config/private/tools/: BUILD  pkg-config.yml  readelf.yml
tools/lint/: BUILD.bazel  linters.bzl
