module(
    name = "rules_pkg_config",
    version = "0.0.0",
)

bazel_dep(name = "rules_python", version = "1.5.3")
bazel_dep(name = "rules_shell", version = "0.5.1")
bazel_dep(name = "bazel_skylib", version = "1.8.1")
bazel_dep(name = "rules_cc", version = "0.2.0")
bazel_dep(name = "platforms", version = "1.0.0")

bazel_dep(name = "aspect_bazel_lib", version = "2.21.0", dev_dependency = True)
bazel_dep(name = "aspect_rules_lint", version = "1.5.3", dev_dependency = True)
bazel_dep(name = "buildifier_prebuilt", version = "8.2.0.2", dev_dependency = True)
bazel_dep(name = "rules_multitool", version = "0.4.0", dev_dependency = True)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.11",
)
use_repo(python, "python_3_11_host")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi",
    python_version = "3.11",
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "pypi")
use_repo(pip, "pypi_311_py_rattler")

multitool = use_extension("@rules_multitool//multitool:extension.bzl", "multitool")
use_repo(multitool, "multitool")
