module(
    name = "rules_pkg_config",
    version = "0.0.0",
)

bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "rules_cc", version = "0.2.14")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_conda", version = "0.1.1")

bazel_dep(name = "aspect_rules_lint", version = "1.10.2", dev_dependency = True)
bazel_dep(name = "buildifier_prebuilt", version = "8.2.0.2", dev_dependency = True)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.11",
)
use_repo(python, "python_3_11_host")

conda = use_extension("@rules_conda//conda:extensions.bzl", "conda")
conda.environment(
    name = "rules_pkg_config_pkg_config",
    lockfile = "//pkg_config/private/tools:conda.lock",
)
conda.environment(
    name = "rules_pkg_config_binutils",
    lockfile = "//pkg_config/private/tools:conda.lock",
)
use_repo(conda, "rules_pkg_config_pkg_config")
use_repo(conda, "rules_pkg_config_binutils")

# multitool = use_extension("@rules_multitool//multitool:extension.bzl", "multitool", dev_dependency = True)
# use_repo(multitool, "multitool")
