module(
    name = "host_pkg_config_example",
    version = "0.0.0",
)

bazel_dep(name = "rules_pkg_config", version = "0.0.0")

local_path_override(module_name = "rules_pkg_config", path = "../..")

pkg = use_extension("@rules_pkg_config//pkg_config:extensions.bzl", "pkg_config")

pkg.location(
    name = "host_location",
    paths = [
        "/usr/lib/*/pkgconfig",
        "/usr/lib/pkgconfig",
        "/usr/share/pkgconfig",
    ],
)

pkg.package(
    name = "host_headers",
    modules = ["zlib"],
)

use_repo(pkg, "host_location_pkg_config")
